<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddJobActivity">


  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:autofillHints=" "
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/job_detail"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="#6750A3"
        android:textColor="@color/white"
        />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

      <!-- job title -->
      <TableRow>
        <TextView
            android:text="@string/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/jobTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />
      </TableRow>

      <!-- Company -->
      <TableRow>
        <TextView
            android:text="@string/company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />
      </TableRow>

      <!-- Location -->
      <TableRow>
        <TextView
            android:text="@string/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"
            android:textSize="18sp"
            tools:ignore="LabelFor,TouchTargetSizeCheck" />
      <TextView
          android:text="@string/state"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textSize="18sp"/>

        <EditText
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />
    </TableRow>

      <!-- Cost of Living -->
      <TableRow>
        <TextView
            android:text="@string/cost_of_living"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/costOfLiving"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />
      </TableRow>

      <!-- Yearly Salary -->
      <TableRow>
        <TextView
            android:text="@string/yearly_salary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/yearlySalary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />
      </TableRow>

      <!-- Yearly Bonus -->
      <TableRow>
        <TextView
            android:text="@string/yearly_bonus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/yearlyBonus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />
      </TableRow>

      <!-- Training and Development Fund -->
      <TableRow>
        <TextView
            android:text="@string/training_development_fund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/trainingFund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />
      </TableRow>

      <!-- Leave Time -->
      <TableRow>
        <TextView
            android:text="@string/leave_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/leaveTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />
      </TableRow>

      <!-- Telework Days -->
      <TableRow>
        <TextView
            android:text="@string/telework_days_per_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/teleworkDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />
      </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="266dp"
        android:gravity="center"
        android:orientation="horizontal">

      <Button
          android:id="@+id/addJobSaveButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="bottom"
          android:layout_margin="32dp"
          android:minWidth="128dp"
          android:text="@string/addJobSaveButtonText"
          android:textSize="24sp"
          tools:ignore="ButtonStyle" />

      <Button
          android:id="@+id/addJobCancelButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="bottom"
          android:layout_margin="32dp"
          android:minWidth="128dp"
          android:text="@string/addJobCancelButtonText"
          android:textSize="24sp"
          tools:ignore="ButtonStyle" />
    </LinearLayout>
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
