<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:background="#6750A3"
      android:gravity="center"
      android:text="Team032 Summer 2024"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="25sp"
      android:textStyle="bold" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:orientation="vertical"
      android:gravity="center_vertical">

    <Button
        android:id="@+id/mainAddJobButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="32dp"
        android:minWidth="256dp"
        android:text="@string/mainAddJobButtonText"
        android:textSize="24sp" />

    <Button
        android:id="@+id/mainAddOfferButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="32dp"
        android:minWidth="256dp"
        android:text="@string/mainAddOfferButtonText"
        android:textSize="24sp" />

    <Button
        android:id="@+id/mainEditSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="32dp"
        android:minWidth="256dp"
        android:text="@string/mainEditSettingsButtonText"
        android:textSize="24sp" />

    <Button
        android:id="@+id/mainRankOffersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="32dp"
        android:enabled="false"
        android:minWidth="256dp"
        android:text="@string/mainRankOffersButtonText"
        android:textSize="24sp" />

  </LinearLayout>
</LinearLayout>
