<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CompareOffersActivity">

  <LinearLayout
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:autofillHints=" "
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/comparison_setting"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="#6750A3"
        android:textColor="@color/white"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:lines="2"
        android:text="@string/adjust_weight_instruction"
        android:textAlignment="center"
        android:textColor="#8D6E63"
        android:textSize="15sp" />

<!-- Yearly Salary -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="10dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/comparison_yearly_salary"
          android:textSize="18sp" />

      <TextView
          android:id="@+id/yearlySalaryValue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="18sp"
          android:layout_marginStart="8dp"
          android:text="@string/comparison_base_setting" />
    </LinearLayout>

    <!-- Yearly Bonus -->
    <SeekBar
        android:id="@+id/yearlySalarySeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:max="9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="10dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/comparison_yearly_bonus"
          android:textSize="18sp" />

      <TextView
          android:id="@+id/yearlyBonusValue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="18sp"
          android:layout_marginStart="8dp"
          android:text="@string/comparison_base_setting" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/yearlyBonusSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:max="9" />

    <!-- Training and Development Fund -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="10dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/comparison_training_and_development_fund"
          android:textSize="18sp" />

      <TextView
          android:id="@+id/trainingValue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="18sp"
          android:layout_marginStart="8dp"
          android:text="@string/comparison_base_setting" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/trainingSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:max="9" />

    <!-- Leave Time -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="10dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/comparison_leave_time"
          android:textSize="18sp" />

      <TextView
          android:id="@+id/leaveTimeValue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="18sp"
          android:layout_marginStart="8dp"
          android:text="@string/comparison_base_setting" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/leaveTimeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:max="9" />

    <!-- Telework Days per Week -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="10dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/comparison_telework_days_per_week"
          android:textSize="18sp" />

      <TextView
          android:id="@+id/teleworkValue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="18sp"
          android:layout_marginStart="8dp"
          android:text="@string/comparison_base_setting" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/teleworkSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:max="9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

      <Button
          android:id="@+id/editSettingsSaveButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="bottom"
          android:layout_margin="32dp"
          android:minWidth="128dp"
          android:text="@string/editSettingsSaveButtonText"
          android:textSize="24sp"
          tools:ignore="ButtonStyle" />

      <Button
          android:id="@+id/editSettingsCancelButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="bottom"
          android:layout_margin="32dp"
          android:minWidth="128dp"
          android:text="@string/editSettingsCancelButtonText"
          android:textSize="24sp"
          tools:ignore="ButtonStyle" />
    </LinearLayout>
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

